--- a/GameCoding/GameCoding.vcxproj
+++ b/GameCoding/GameCoding.vcxproj
@@ -148,8 +148,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="Animator.h" />
     <ClInclude Include="BlendState.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CameraMove.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ConstantBuffer.h" />
     <ClInclude Include="framework.h" />
@@ -164,7 +166,7 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshRenderer.h" />
-    <ClInclude Include="Meterial.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="MonoBehaviour.h" />
     <ClInclude Include="MyMatrix.h" />
     <ClInclude Include="pch.h" />
@@ -193,8 +195,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="Animator.cpp" />
     <ClCompile Include="BlendState.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="CameraMove.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ConstantBuffer.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -208,7 +212,7 @@
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MeshRenderer.cpp" />
-    <ClCompile Include="Meterial.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="MonoBehaviour.cpp" />
     <ClCompile Include="MyMatrix.cpp" />
     <ClCompile Include="pch.cpp">
