--- a/GameCoding/GameCoding.vcxproj.filters
+++ b/GameCoding/GameCoding.vcxproj.filters
@@ -221,6 +221,9 @@
     <ClInclude Include="CameraMove.h">
       <Filter>소스 파일\01. Main</Filter>
     </ClInclude>
+    <ClInclude Include="tinyxml2.h">
+      <Filter>소스 파일\99. Headers\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameCoding.rc">
@@ -352,6 +355,9 @@
     </ClCompile>
     <ClCompile Include="CameraMove.cpp">
       <Filter>소스 파일\01. Main</Filter>
+    </ClCompile>
+    <ClCompile Include="tinyxml2.cpp">
+      <Filter>소스 파일\99. Headers\Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
