--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="06. SamplerDemo.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="07. HeightMapDemo.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -71,6 +74,9 @@
     <ClInclude Include="06. SamplerDemo.h">
       <Filter>Game</Filter>
     </ClInclude>
+    <ClInclude Include="07. HeightMapDemo.h">
+      <Filter>Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="..\Shaders\01. Triangle.fx">
@@ -86,6 +92,9 @@
       <Filter>Shaders</Filter>
     </FxCompile>
     <FxCompile Include="..\Shaders\05. Sampler.fx">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="..\Shaders\06. Terrain.fx">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
