--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -26,6 +26,7 @@
     <ClInclude Include="06. SamplerDemo.h" />
     <ClInclude Include="07. HeightMapDemo.h" />
     <ClInclude Include="08. NormalDemo.h" />
+    <ClInclude Include="09. MeshDemo.h" />
     <ClInclude Include="CameraScript.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="pch.h" />
@@ -39,6 +40,7 @@
     <ClCompile Include="06. SamplerDemo.cpp" />
     <ClCompile Include="07. HeightMapDemo.cpp" />
     <ClCompile Include="08. NormalDemo.cpp" />
+    <ClCompile Include="09. MeshDemo.cpp" />
     <ClCompile Include="CameraScript.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
@@ -58,22 +60,8 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Effect</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
-    <FxCompile Include="..\Shaders\02. Quad.fx">
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      </EntryPointName>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      </EntryPointName>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Effect</ShaderType>
-    </FxCompile>
-    <FxCompile Include="..\Shaders\03. ConstBuffer.fx">
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Effect</ShaderType>
-    </FxCompile>
+    <FxCompile Include="..\Shaders\02. Quad.fx" />
+    <FxCompile Include="..\Shaders\03. ConstBuffer.fx" />
     <FxCompile Include="..\Shaders\04. Texture.fx" />
     <FxCompile Include="..\Shaders\05. Sampler.fx" />
     <FxCompile Include="..\Shaders\06. Terrain.fx" />
@@ -183,6 +171,9 @@
       <AdditionalLibraryDirectories>$(SolutionDir)Libraries\Lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <FxCompile>
+      <EntryPointName />
+    </FxCompile>
+    <FxCompile>
       <ShaderType>Effect</ShaderType>
     </FxCompile>
     <FxCompile>
@@ -208,6 +199,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)Libraries\Lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <FxCompile>
+      <EntryPointName />
+    </FxCompile>
     <FxCompile>
       <ShaderType>Effect</ShaderType>
     </FxCompile>
