--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="GeometryHelper.h">
       <Filter>01. Graphics\Buffer</Filter>
     </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>04. Component</Filter>
+    </ClInclude>
     <ClInclude Include="GameObject.h">
       <Filter>03. GameObject</Filter>
     </ClInclude>
@@ -117,13 +120,10 @@
     <ClInclude Include="Camera.h">
       <Filter>04. Component</Filter>
     </ClInclude>
-    <ClInclude Include="Component.h">
-      <Filter>04. Component</Filter>
+    <ClInclude Include="Mesh.h">
+      <Filter>00. Engine\Resource</Filter>
     </ClInclude>
     <ClInclude Include="MeshRenderer.h">
-      <Filter>04. Component</Filter>
-    </ClInclude>
-    <ClInclude Include="Mesh.h">
       <Filter>04. Component</Filter>
     </ClInclude>
   </ItemGroup>
@@ -191,25 +191,25 @@
     <ClCompile Include="GeometryHelper.cpp">
       <Filter>01. Graphics\Buffer</Filter>
     </ClCompile>
+    <ClCompile Include="Component.cpp">
+      <Filter>04. Component</Filter>
+    </ClCompile>
     <ClCompile Include="GameObject.cpp">
       <Filter>03. GameObject</Filter>
     </ClCompile>
     <ClCompile Include="Transform.cpp">
       <Filter>04. Component</Filter>
     </ClCompile>
-    <ClCompile Include="Camera.cpp">
-      <Filter>04. Component</Filter>
-    </ClCompile>
-    <ClCompile Include="Component.cpp">
-      <Filter>04. Component</Filter>
-    </ClCompile>
     <ClCompile Include="MonoBehaviour.cpp">
       <Filter>04. Component</Filter>
     </ClCompile>
-    <ClCompile Include="MeshRenderer.cpp">
+    <ClCompile Include="Camera.cpp">
       <Filter>04. Component</Filter>
     </ClCompile>
     <ClCompile Include="Mesh.cpp">
+      <Filter>00. Engine\Resource</Filter>
+    </ClCompile>
+    <ClCompile Include="MeshRenderer.cpp">
       <Filter>04. Component</Filter>
     </ClCompile>
   </ItemGroup>
