7주차 모델 띄우기

--- a/AssimpTool/AssimpTool.vcxproj.filters
+++ b/AssimpTool/AssimpTool.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="AsTypes.h">
       <Filter>Main</Filter>
     </ClInclude>
+    <ClInclude Include="StaticMeshDemo.h">
+      <Filter>Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -49,6 +52,9 @@
     </ClCompile>
     <ClCompile Include="AsTypes.cpp">
       <Filter>Main</Filter>
+    </ClCompile>
+    <ClCompile Include="StaticMeshDemo.cpp">
+      <Filter>Game</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
