선택 강의 StructureBuffer

--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="GroupDemo.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="TextureBufferDemo.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -66,6 +69,9 @@
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="GroupDemo.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureBufferDemo.h">
       <Filter>Game</Filter>
     </ClInclude>
   </ItemGroup>
@@ -152,6 +158,9 @@
       <Filter>Shaders\Week4</Filter>
     </FxCompile>
     <FxCompile Include="..\Shaders\25. GroupDemo.fx">
+      <Filter>Shaders\Week4</Filter>
+    </FxCompile>
+    <FxCompile Include="..\Shaders\26. TextureBufferDemo.fx">
       <Filter>Shaders\Week4</Filter>
     </FxCompile>
   </ItemGroup>
