--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -214,6 +214,9 @@
     <ClInclude Include="TextureBuffer.h">
       <Filter>05. ComputeShader\Buffer</Filter>
     </ClInclude>
+    <ClInclude Include="StructuredBuffer.h">
+      <Filter>05. ComputeShader\Buffer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -370,6 +373,9 @@
       <Filter>05. ComputeShader\Buffer</Filter>
     </ClCompile>
     <ClCompile Include="TextureBuffer.cpp">
+      <Filter>05. ComputeShader\Buffer</Filter>
+    </ClCompile>
+    <ClCompile Include="StructuredBuffer.cpp">
       <Filter>05. ComputeShader\Buffer</Filter>
     </ClCompile>
   </ItemGroup>
