선택 강의 Sphere Collider

--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Shaders\Week4">
       <UniqueIdentifier>{d710bac0-106e-41c1-bec4-b6617dffa0b4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Week3">
+      <UniqueIdentifier>{24e9d332-4412-499f-a5e1-f9defb908a26}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -57,6 +60,9 @@
     <ClCompile Include="ViewportDemo.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="CollisionDemo.cpp">
+      <Filter>Game\Week3</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -85,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="ViewportDemo.h">
       <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="CollisionDemo.h">
+      <Filter>Game\Week3</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
